--- a/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
@@ -26,7 +26,7 @@
 				</div>
 				<div class="panel-body list-group">
 				
-					<a href=" {{ path('admin_guia') }}" class="list-group-item">
+					<a href=" {{ path('guia') }}" class="list-group-item">
 						<i class="icon-edit"></i>
 						Modificar classificació
 					</a>
