--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/editar.html.twig
@@ -4,7 +4,7 @@
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           <h4 class="modal-title">Editar notícia</h4>
         </div>
-		<form action="{{ path("noticies_actualitzar", { 'id': noticiaEditable.id }) }}" method="post">
+		<form action="{{ path("noticies_actualitzar", { 'id': '3' }) }}" method="post">
 	      	<div class="modal-body"> 	
 		      	<p>Es pot modificar la següent informació:</p>
 		        <label>Títol</label>
