--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/subnivell.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/subnivell.html.twig
@@ -2,9 +2,9 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Afegir nova notícia</h4>
+          <h4 class="modal-title">Afegir nou</h4>
         </div>
-		<form action="{{ path("noticies_crear") }}" method="post">
+		<form action="{{ path("guia_subnivell", { 'id': '3' }) }}" method="post">
 	      	<div class="modal-body"> 	
 		      	<p>Per afegir una nova noticia cal introduir la següent informació:</p>
 		        <label for="username">Títol</label>
