Added flash message for AdminArxiu nou form

--- a/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Guia/guia.html.twig
@@ -18,8 +18,30 @@
 	<div class="page-header">
         <h1>Classificació de l'arxiu</h1>
 	</div>
+
+
+{% for flashMessage in app.session.flashbag.get('success') %}
+<div class="row" style="margin-left:0px ">
+	<div class="col-xs-9 col-sm-4 col-lg-4 col-lg-offset-2">
+	    <div class="alert alert-success alert-dismissable">
+	    	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+	        <strong>{{ flashMessage }}</strong>
+	    </div>
+	</div>
+</div>
+{% endfor %}
+{% for flashMessage in app.session.flashbag.get('error') %}
+<div class="row" style="margin-left:0px ">
+	<div class="col-xs-9 col-sm-4 col-lg-4 col-lg-offset-2">
+	    <div class="alert alert-danger alert-dismissable">
+	    	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+	        <strong>{{ flashMessage }}</strong>
+	    </div>
+	</div>
+</div>
+{% endfor %}	
 	
-<div class="row" style="margin-left:0px ">	
+<div class="row" style="margin-left:0px ">
 	<div class="col-md-7 col-lg-7 well">
     	<h4>Continguts:</h4>
     	
