--- a/src/ADG/PrincipalBundle/Resources/views/AdminGuia/editar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminGuia/editar.html.twig
@@ -1,26 +1,26 @@
- <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Editar notícia</h4>
-        </div>
-		<form action="{{ path("noticies_actualitzar", { 'id': '3' }) }}" method="post">
-	      	<div class="modal-body"> 	
-		      	<p>Es pot modificar la següent informació:</p>
-		        <label>Títol</label>
-				<div class="form-group">
-				  <input type="text" class="form-control" name="titolEditar" required="required" value="{{ noticiaEditable.titol }}">
-				</div>
-		        <label>Contingut</label>
-		       	<div class="form-group">
-				  <input type="text" class="form-control" rows="3" name="contingutEditar" required="required" value="{{ noticiaEditable.contingut }}">
-				</div>
-	        </div>
-	        <div class="modal-footer">
-	          <button class="btn btn-default" data-dismiss="modal">Tancar</button>
-	          <button class="btn btn-success" type="submit"><i class="icon-pencil"></i>&nbsp;Actualitzar</button>
-	        </div>
-		</form><!-- /.form -->
+{% extends 'PrincipalBundle:AdminGuia:baseModal.html.twig' %}
 
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
+{% block arxiuTitle %}
+	Editar <strong>{{ info.nivell }}</strong>
+{% endblock %}
+
+
+{% block arxiuInfo %}
+	<p>Modificar l'informació actual.</p>
+{% endblock %}
+
+{% block arxiuFormPath %}
+	{{ path("guia_editar_confirmar") }}
+{% endblock %}
+
+{% block arxiuNivell %}
+	<input type="hidden" name="original" value="{{ info.nivell }}">
+      	{% set len =  info.nivell | length %}
+      	<input type="hidden" name="nivell" value="{{ info.nivell | slice(0, len-2) }}">
+      	<div class="input-group">
+			<span class="input-group-addon">Nivell *  <strong>{{ info.nivell | slice(0, len-2) }}</strong></span>
+			<input type="text" class="form-control" pattern="^([a-zA-Z0-9]*\.)$" 
+				title="Només pot tenir números i/o lletres i finalitzar amb un punt." 
+				value="{{ info.nivell | slice(len-2, len) }}" name="suffix" required>
+		</div><div class="space10"></div>
+{% endblock %}
