--- a/src/ADG/PrincipalBundle/Resources/views/Default/contacte.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/contacte.html.twig
@@ -4,4 +4,55 @@
 
 {% block body %}
 
+        <div class="page-header">
+          <h1>Contacte</h1>
+        </div>
+
+        <div class="row">
+        	<!-- Mapa -->
+	        <div class="col-md-7 col-lg-7 " style="margin-left:-10px">
+	            <iframe height="600" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.es/maps?f=q&amp;source=s_q&amp;hl=es&amp;geocode=&amp;q=Pujada+de+Sant+Mart%C3%AD,+12,+Girona&amp;aq=0&amp;oq=pujada+sant+mart%C3%AD,+12&amp;sll=40.2085,-3.713&amp;sspn=18.195548,43.286133&amp;ie=UTF8&amp;hq=&amp;hnear=Pujada+de+Sant+Mart%C3%AD,+12,+17004+Girona,+Catalunya&amp;t=m&amp;ll=41.984632,2.822285&amp;spn=0.030624,0.054932&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.es/maps?f=q&amp;source=embed&amp;hl=es&amp;geocode=&amp;q=Pujada+de+Sant+Mart%C3%AD,+12,+Girona&amp;aq=0&amp;oq=pujada+sant+mart%C3%AD,+12&amp;sll=40.2085,-3.713&amp;sspn=18.195548,43.286133&amp;ie=UTF8&amp;hq=&amp;hnear=Pujada+de+Sant+Mart%C3%AD,+12,+17004+Girona,+Catalunya&amp;t=m&amp;ll=41.984632,2.822285&amp;spn=0.030624,0.054932&amp;z=14&amp;iwloc=A" style="color:#0000FF;text-align:left">Veure mapa més gran</a></small>
+		    </div>
+	        
+	        <div class="col-md-5 col-lg-5">
+	            <h3 style="margin-top:-5px">Informació</h3>
+	            <address> 	
+	                <strong>Arxiu diocesà i Biblioteca diocesana del Seminari de Girona</strong><br>
+	                Pujada Sant Martí,12<br>
+	                17004, GIRONA
+	            </address>
+	
+	            <address><strong>Telèfon</strong><br> 972 48 73 46</address>
+	    
+	            <h3>Contactes</h3>
+	            
+	            <address><strong>Arxiu diocesà:</strong>
+	            info@arxiuadg.org</address>
+	
+	            <address><strong>Biblioteca:</strong>
+	            bsg@telefonica.net</address>
+	
+	            <address><strong>Director</strong>
+	            Llic. Joan Naspleda</address>
+	
+	            <address><strong>Oficial Arxiu i Biblioteca</strong>
+	            Llic. Albert Serrat</address>
+	
+	            <address><strong>Oficial arxiver</strong>
+	            Llic. Joan Villar</address>
+	
+	            <address><strong>Oficial biblioteca</strong>
+	            Llic. Anna Bancells</address>
+	
+	            <p><strong>Horari</strong><br>
+	            Matins: de dimarts a dijous
+	            de 10h a 14h<br>
+	            Tardes: de dilluns a dijous de 16h a 20h</p>
+	            
+	            <br>
+	            <div class="alert alert-info">
+	                Per a la consulta d'arxius digitalitzats, és oportú de fer la reserva per telèfon o correu electrònic.
+	            </div>
+	      </div>
+   	  </div>
 {% endblock %}
