--- a/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/capitular.html.twig
@@ -3,5 +3,15 @@
 {% block title %}Contacte{% endblock %}
 
 {% block body %}
+	<div class="page-header">
+        <h1>Arxiu capitular</h1>
+	</div>
+	<div class="row">
+		<div class="col-md-7 col-lg-7">
+			<em>en construcció...</em>
 		
+		</div>
+		<div class="col-md-5 col-lg-5">
+		</div>
+	</div>
 {% endblock %}
