--- a/src/ADG/PrincipalBundle/Resources/views/Default/normativa.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Default/normativa.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Normativa{% endblock %}
 
 {% block body %}
-		
+
+
+<object data="{{ asset('bundles/adg/docs/normativa.pdf') }}" type="application/pdf" style="width: 100%;height:100%;"></object>
+
+
+
 {% endblock %}
